--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@ html {
      -moz-box-sizing: border-box;
      box-sizing: border-box;
 }
-*, *:before, *:after {
+*, *:before,
+*:after {
       box-sizing: inherit;
       -webkit-box-sizing: inherit;
       -moz-box-sizing: inherit;
 }
 
-body {
-     background: #191765;
+body{
+    background: #191765;
 }
 
 .title {
@@ -30,18 +31,18 @@ ul li {
 }
 
 h3 {
-    color: #fff;
+  color: #fff;
 }
 
-p {
-    font-size: 20px;
-    font-family: Roboto, sans-serif;
+p{
+  font-size: 20px;
+  font-family: Roboto, sans-serif;
 }
 
 .tech {
-      color: #9390FF;
-      font-family: Roboto, sans-serif;
-      font-size: 18px;
+     color: #9390FF;
+     font-family: Roboto, sans-serif;
+     font-size: 18px;
 
 }
 
